# emuse

./: .gitignore  CMakeLists.txt  README.md  asm.sh  emuse.sh  even_burn.sh  hunk.sh  misc.txt  mkhex.py  odd_burn.sh  shell.sh  split_rom.py  up.sh  upemu.sh
asm/: biosram.asm  boot.asm  bootloader.asm  console.asm  hardware.i  hardware.inc  jt_root.asm  loader.asm  memman.asm  mmc.asm  monitor.asm  ramtest.asm  storagedevice.asm  uart.asm  uart.i  uploader.asm
asm/lib/: dirent.i  doslib.i  errcode.i  rootlib.i
asm/shell/: cat.asm  cd.asm  dumpmemory.asm  errcode.asm  errcode.i  exceptions.asm  exec.asm  free.asm  ls.asm  part.asm  printutil.asm  process.asm  resolv.asm  run.asm  shell.asm  shell_bios.asm
asm/storage/: dirent.i  exeloader.asm  fat16.asm  fat16.i  fileman.asm  fileman.i  littleendian.asm  mmc.asm  osvars.i  partman.asm  partman.i  storagedevice.asm  storagedevice.i  volman.asm
asm/utils/: blinker.asm  command.asm  decimal.asm  hellowld.asm  misctools.asm
include/: addressable_latch.h  booleanfunc.h  bus.h  cpu.h  input_reg.h  m68k.h  memory.h  mmc.h  probe.h  readwritefunc.h  reset.h  samplesource.h  sector_storage.h  spi.h  ticker.h  uart.h
sbc68k/: README.md  build_reset.sh  decode.chp  decode.fus  decode.ini  decode.jed  decode.pin  decode.pld  decode.py  read_attiny.sh  reset.c  reset.elf  reset.hex
src/: application.c  application.h  audio.c  audio.h  debugger.c  debugger.h  emuse.c  emustats.c  emustats.h  exetest.c  file_inject.c  file_inject.h  font.c  font.h  log.h  sharedstate.h  texture.c  texture.h  vga.c  vga.h
src/bus/: bus.c
src/m68k/: adda.c  adda.h  alu.c  alu.h  branch.c  branch.h  btst.c  btst.h  clr.c  clr.h  condition.c  condition.h  dbcc.c  dbcc.h  decode.c  decode.h  div.c  div.h  jump.c  jump.h  lea.c  lea.h  m68k.c  m68khelper.c  move.c  move.h  movem.c  movem.h  mulu.c  mulu.h  pushpop.c  pushpop.h  rte.c  rte.h  rts.c  rts.h  shift.c  shift.h  sourcedest.c  sourcedest.h  (+4 more)
src/peripheral/: addressable_latch.c  input_reg.c  memory.c  mmc.c  pts_handler.c  pts_handler.h  sector_storage.c  spi.c  uart.c
